# refined-line

./: CHANGELOG.md  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  release-please-config.json
.github/workflows/: release-please.yml  tauri-build.yml
scirpts/: number.py
src/: index.html
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/injections/: font.js  hotkeys.js  no-scrollbar.js  notify-badge.js  sidebar.js  titlebar.js
src-tauri/src/: app_menu.rs  commands.rs  content_protection.rs  crx.rs  extensions.rs  injections.rs  lib.rs  logger.rs  main.rs  paths.rs  settings.rs  tray.rs  updater.rs  windowing.rs
src-tauri/src/notify_badge/: assets.rs  mod.rs
