[package]
name = "refined-line"
version = "0.1.0"
description = "refined-line (Tauri v2 + WebView2)"
authors = ["akaaku"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "refined_line_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1.0"
prost = "0.12"
ureq = "2.12"
url = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
log = "0.4"
dirs = "6"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = "0.61.2"
